add package: initramfs-hacks
virtual package that provides some target modifications
to make it suit better for better-initramfs.

--- a/package/Config.in
+++ b/package/Config.in
@@ -2,4 +2,5 @@
 menu "dywi/better-initramfs-buildroot [external repo]"
 	source "package/askpass/Config.in"
 	source "package/better-initramfs/Config.in"
+	source "package/initramfs-hacks/Config.in"
 endmenu
