add telinit script

--- a/package/Config.in
+++ b/package/Config.in
@@ -3,4 +3,5 @@ menu "dywi/better-initramfs-buildroot [external repo]"
 	source "package/askpass/Config.in"
 	source "package/better-initramfs/Config.in"
 	source "package/initramfs-hacks/Config.in"
+	source "package/telinit/Config.in"
 endmenu
